# Paramify

./: .env  .env.deployment  .env.example  .gitignore  AGENT_SYSTEMS_INSTRUCTIONS.md  AI_HANDOFF_PROMPT.xml  CODEBASE_EXPORT.md  COMPLETE_CODEBASE_EXPORT.md  Cargo.toml  DEMO_DEPLOYMENT_SUMMARY.md  DEMO_STARTUP_CHECKLIST.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.dfx  ENGINEERING_HANDOFF_PROMPT.md  FUNDING_ERRORS_RESOLUTION.md  HANDOVER_PROMPT.md  ICP_CONVERSION_SUMMARY.md  ICP_IMPLEMENTATION_README.md  ICP_INTEGRATION.md  ICP_MIGRATION_README.md  LLM_ANALYSIS_EXPORT.md  METAMASK_POLKAVM_SETUP.md  MockV3Aggregator.sol  NETWORK_ERROR_RESOLUTION.md  PASSET_HUB_DEPLOYMENT_ISSUE.md  PASSET_HUB_PROOF_OF_CONCEPT.md  POLKAVM_DEPLOYMENT_GUIDE.md  POLKAVM_MIGRATION_STATUS.md  POLKAVM_TESTING_GUIDE.md  README-ICP.md  README.md  README_SECURE.md  START_POLKAVM_AND_TEST.md  TEST_EXECUTION_GUIDE.md  THRESHOLD_DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md  USGS_INTEGRATION_GUIDE.md  VALIDATION_REPORT.md  activity.md  (+17 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
backend/: .env  .env.local  Dockerfile  icpBridge.js  icpServer.js  package-lock.json  package.json  server.js  simple-server.js  test-canister-final.js
cache/: solidity-files-cache.json
contracts/: Lock.sol  MinimalTest.sol  MinimalTestContract.sol  Paramify.sol  ParamifySimple.sol  SimpleTest.sol
docs/: activity.md  analysis_report.md  frontend-integration.md  migration-plan.md  parity_matrix.md  setup.md  troubleshooting.md
frontend/: .env  .env.local  Dockerfile  README.md  index.html  package-lock.json  package.json
icp-canister/: BACKEND_ORACLE_GUIDE.md  Cargo.toml  FRONTEND_ADAPTATION_GUIDE.md  QUICK_START.md  README.md  deploy-windows.ps1  deploy.sh  dfx.json
icp-canister/.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
icp-canister/.dfx/network/local/state/replicated_state/: ic.json5
icp-canister/src/: lib.rs  paramify_insurance.did
icp-integration/: dfx.json
interfaces/: insurance.did  oracle.did  payments.did
scripts/: analyze-network.js  check-account-balance.js  check-backend-account.js  check-backend.ps1  check-balance.js  check-network.js  check-passet-balance.js  compile-with-resolc.ts  debug-contracts.js  deep-validation.sh  (+56 more)
src/canisters/oracle/: Cargo.toml  oracle.did
src/canisters/oracle/src/: lib.rs  tests.rs
(+108 files in other folders)
