[workspace]
members = ["src/canisters/oracle"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paramify Development Team"]
license = "MIT"
repository = "https://github.com/danielabrahamx/Paramify"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-cdk-macros = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"

# For HTTPS outcalls
ic-cdk-http = "0.1.0"

# For stable storage
ic-stable-structures = "0.6"

# For JSON parsing
ciborium = "0.2"

# For testing
mockito = { version = "1.2", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
reqwest = { version = "0.11", optional = true }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2