[package]
name = "paramify_insurance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ic-cdk-macros = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

