[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-cdk-macros = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
ic-stable-structures = "0.6"
ciborium = "0.2"

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1.35", features = ["full"] }
reqwest = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"